objects/Support_Opportunity_for_Next_Year__c.object
<CustomObject>
    <fields>
        <fullName>ABB_Sales_Stage__c</fullName>
        <description>R6- Req 3328</description>
        <label>ABB Sales Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Customer_Primary_Address_Country__c</fullName>
        <label>Account Customer Primary Address Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Support Opportunities for Next Year</relationshipLabel>
        <relationshipName>Support_Opportunities_for_Next_Year</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Plan_Status__c</fullName>
        <formula>TEXT(Account_Plan__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <description>R6- Req 3328</description>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipName>Support_Opportunities_for_Next_Year</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Alternative_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R6- Req 3328</description>
        <label>Alternative Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Support Opportunities for Next Year</relationshipLabel>
        <relationshipName>Support_Opportunities_for_Next_Year</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>R6- Req 3328</description>
        <label>BU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confidence_Level__c</fullName>
        <label>Confidence Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIV__c</fullName>
        <label>DIV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R6- Req 3328</description>
        <label>End User Project</label>
        <referenceTo>End_User_Project__c</referenceTo>
        <relationshipLabel>Support Opportunities for Next Year</relationshipLabel>
        <relationshipName>Support_Opportunities_for_Next_Year</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Award_Date__c</fullName>
        <label>Expected Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Freeze_Future_Support_Opportunities__c</fullName>
        <formula>Account_Plan__r.Freeze_Account_Plan_Budgets_FUTURE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Freeze Future Supporting Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name_Hidden__c</fullName>
        <formula>Opportunity_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name (Hidden)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R6- Req 3328</description>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Support Opportunities for Next Year (Opportunity Name)</relationshipLabel>
        <relationshipName>Support_Opportunities_for_Next_Year1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <description>R6- Req 3328</description>
        <label>Opportunity Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Value_USD__c</fullName>
        <label>Opportunity Value USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Value__c</fullName>
        <label>Opportunity Value</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PG1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R6- Req 3328</description>
        <label>PG</label>
        <referenceTo>Product_Group__c</referenceTo>
        <relationshipLabel>Support Opportunities for Next Year</relationshipLabel>
        <relationshipName>Support_Opportunities_for_Next_Year</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <formula>Opportunity_Name__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probability %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Group_Hidden__c</fullName>
        <formula>PG1__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group (Hidden)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R6- Req 3328</description>
        <label>Target</label>
        <type>Checkbox</type>
    </fields>
    <label>Supporting Opportunity for Next Year</label>
    <nameField>
        <displayFormat>OPP-FBGT-{0000}</displayFormat>
        <label>Supporting Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supporting Opportunities for Next Year</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Account_Plan_Status_Closed_Check</fullName>
        <active>true</active>
        <description>R6 - Created as part of 3328 - If Account Plan Status is Closed, the user should not edit the Budget.</description>
        <errorConditionFormula>ISPICKVAL(Account_Plan__r.Status__c, &apos;Closed&apos;)</errorConditionFormula>
        <errorMessage>You cannot save the changes - Account Plan is Closed</errorMessage>
    </validationRules>
</CustomObject>